[Harish] : Adds controller layer for remove post from read later
